a lot of new algos